# ima-qdrant-mcp-server

./: .gitignore  .qdrant.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/qdrant_mcp/: config.py  embed.py  qdrant.py  server.py
tests/: conftest.py  test_config.py  test_embed.py  test_qdrant.py  test_server.py
